Updating validations in every page

--- a/src/app/change-password/change-password.component.html
+++ b/src/app/change-password/change-password.component.html
@@ -39,13 +39,20 @@
 
     <mat-form-field class="field" appearance="fill">
       <mat-label>Enter Old Password</mat-label>
-      <input matInput type="password"  name="oldPassword" [(ngModel)]="user.oldPassword" #oldPassword="ngModel" required>
+      <input matInput type="password"  name="oldPassword" [(ngModel)]="user.oldPassword" #oldPassword="ngModel" minlength="8" maxlength="12" required>
+      <mat-error>
+        <div *ngIf="oldPassword.invalid && (oldPassword.dirty || oldPassword.touched)" class="alert">
+            <div *ngIf="oldPassword.errors?.required">
+              old Password is required.
+            </div>
+          </div>
+        </mat-error>
     </mat-form-field>
 
     
     <mat-form-field class="field" appearance="fill">
       <mat-label>Enter New Password</mat-label>
-      <input matInput type="password" pattern="^[a-zA-Z0-9!@#\$%\^\&*_=+-]{8,10}$" minlength="8" maxlength="10" 
+      <input matInput type="password" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@#/\$%\^\&*_=+-])[a-zA-Z0-9!@#/\$%\^\&*_=+-]+$" minlength="8" maxlength="12" 
       name="newPassword" [(ngModel)]="user.newPassword" #newPassword="ngModel" required>
       <mat-error>
       <div *ngIf="newPassword.invalid && (newPassword.dirty || newPassword.touched)" class="alert">
@@ -58,7 +65,7 @@
             Password must contain at least 1 Uppercase,
             At least 1 Lowercase,
             At least 1 Number,
-            At least 1 special character, Min 8 characters and Max 10 characters
+            At least 1 special character, Min 8 characters and Max 12 characters
           </div>
         
         </div>
@@ -69,22 +76,15 @@
     <mat-form-field class="field" appearance="fill">
       <mat-label>Confirm Password</mat-label>
       <input matInput type="password" minlength="8" maxlength="10" name="cpassword"   [(ngModel)]="user.cpassword" #cpassword="ngModel" 
-      required>
-      
-
+      required>   
       <mat-error>
         <div *ngIf="cpassword.invalid && (cpassword.dirty || cpassword.touched)" class="alert">
-
             <div *ngIf="cpassword.errors?.required">
               Confirm Password is required.
             </div>
-
           </div>
         </mat-error>
-
     </mat-form-field>
-
-
 
     <button class="button" (click)="changePassword()" mat-raised-button color="primary">
         Change
