--- a/src/app/forgotpassword/forgotpassword.component.html
+++ b/src/app/forgotpassword/forgotpassword.component.html
@@ -16,7 +16,7 @@
 
 <mat-card class="card">
   <img class="imagef" src="./assets/forgotlogo.png">
-  <mat-stepper [linear]="isLinear" #stepper>
+  <mat-stepper #stepper linear>
     
     <mat-step [stepControl]="firstFormGroup">
       <form [formGroup]="firstFormGroup">
@@ -28,7 +28,7 @@
         <mat-form-field class="fieldd">
           
           <input type="text" matInput placeholder="Enter DAS ID" name="dasId"
-          formControlName="firstCtrl" minlength="7" maxlength="7"pattern="[A0-9]{7}$" required >
+          formControlName="firstCtrl" minlength="7" maxlength="7"pattern="[A][0-9]{6}" required >
           <mat-error 
           *ngIf="(form1.firstCtrl.invalid && form1.firstCtrl.errors?.required) && 
           (form1.firstCtrl.dirty || form1.firstCtrl.touched )">
@@ -39,8 +39,13 @@
            <mat-error class="alertext" 
            *ngIf="form1.firstCtrl.invalid && form1.firstCtrl.errors?.minlength">
 
-           Das Id must start with 'A' and contain 7 characters
+           Das Id must start with 'A' and contain 7 digits
             </mat-error>
+            <mat-error class="alertext" 
+            *ngIf="form1.firstCtrl.invalid && form1.firstCtrl.errors?.pattern">
+ 
+            Das Id must start with 'A' 
+             </mat-error>
 
         </mat-form-field>
         <div><br><br>
@@ -79,7 +84,7 @@
         <mat-form-field class="fieldp">
           <mat-label>Enter new Password</mat-label>
           <input matInput type="password" formControlName="thirdCtrl" placeholder="Enter new Password" name="user.password" 
-              minlength="8"  maxlength="10" required >
+          pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@#/\$%\^\&*_=+-])[a-zA-Z0-9!@#/\$%\^\&*_=+-]+$" minlength="8"  maxlength="12" required >
                  <mat-error 
                  *ngIf="(form3.thirdCtrl.invalid && form3.thirdCtrl.errors?.required) && 
                  (form3.thirdCtrl.dirty || form3.thirdCtrl.touched )">
