--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -61,7 +61,7 @@
 
     <ng-container matColumnDef="gcmLevel">
       <th class="th" mat-header-cell *matHeaderCellDef mat-sort-header> GCM Level </th>
-      <td mat-cell *matCellDef="let element"> {{element.gcmLevel}} </td>
+      <td style="padding-left: 30px;" mat-cell *matCellDef="let element"> {{element.gcmLevel}} </td>
     </ng-container>
 
     <ng-container matColumnDef="mobile">
