--- a/src/app/change-password/change-password.component.html
+++ b/src/app/change-password/change-password.component.html
@@ -87,7 +87,7 @@
     </mat-form-field>
 
     <button class="button" (click)="changePassword()" mat-raised-button color="primary">
-        Change
+        Update
     </button>
 
 </mat-card>
