--- a/src/app/editprofile/editprofile.component.html
+++ b/src/app/editprofile/editprofile.component.html
@@ -25,8 +25,10 @@
 <mat-icon>AL</mat-icon>
 <span>Apply Leave</span>
 </button>
-
-
+<button mat-menu-item routerLink="/changePassword">
+    <mat-icon>lock</mat-icon>
+    <span>Change Password</span>
+  </button>
 <button mat-menu-item routerLink="">
 <mat-icon>logout</mat-icon>
 <span>Logout</span>
