--- a/src/app/view/view.component.html
+++ b/src/app/view/view.component.html
@@ -15,6 +15,14 @@
         <mat-icon>AL</mat-icon>
         <span>Apply Leave</span>
       </button>
+      <button mat-menu-item routerLink="/changePassword">
+        <mat-icon>lock</mat-icon>
+        <span>Change Password</span>
+      </button>
+      <button mat-menu-item routerLink="/editprofile">
+        <mat-icon>account_circle</mat-icon>
+        <span>Edit Profile</span>
+      </button>
       <button mat-menu-item routerLink="">
         <mat-icon>logout</mat-icon>
         <span>Logout</span>
