--- a/src/app/change-password/change-password.component.html
+++ b/src/app/change-password/change-password.component.html
@@ -15,6 +15,14 @@
           <mat-icon>AL</mat-icon>
           <span>Apply Leave</span>
         </button>
+        <button *ngIf="isAdmin" mat-menu-item routerLink="/deactivate">
+          <mat-icon>autorenew</mat-icon>
+          <span>Activate / Deactivate</span>
+        </button>
+        <button *ngIf="isAdmin" mat-menu-item routerLink="/export">
+          <mat-icon>download</mat-icon>
+          <span>Export Leave Details</span>
+        </button>
         <button mat-menu-item routerLink="/editprofile">
           <mat-icon>account_circle</mat-icon>
           <span>Edit Profile</span>
