--- a/src/app/editprofile/editprofile.component.html
+++ b/src/app/editprofile/editprofile.component.html
@@ -25,6 +25,14 @@
 <mat-icon>AL</mat-icon>
 <span>Apply Leave</span>
 </button>
+<button *ngIf="isAdmin" mat-menu-item routerLink="/deactivate">
+  <mat-icon>autorenew</mat-icon>
+  <span>Activate / Deactivate</span>
+</button>
+<button *ngIf="isAdmin" mat-menu-item routerLink="/export">
+  <mat-icon>download</mat-icon>
+  <span>Export Leave Details</span>
+</button>
 <button mat-menu-item routerLink="/changePassword">
     <mat-icon>lock</mat-icon>
     <span>Change Password</span>
