--- a/src/app/view/view.component.html
+++ b/src/app/view/view.component.html
@@ -19,6 +19,14 @@
         <mat-icon>lock</mat-icon>
         <span>Change Password</span>
       </button>
+      <button *ngIf="isAdmin" mat-menu-item routerLink="/deactivate">
+        <mat-icon>autorenew</mat-icon>
+        <span>Deactivate</span>
+      </button>
+      <button *ngIf="isAdmin" mat-menu-item routerLink="/export">
+        <mat-icon>download</mat-icon>
+        <span>Export Leave Details</span>
+      </button>
       <button mat-menu-item routerLink="/editprofile">
         <mat-icon>account_circle</mat-icon>
         <span>Edit Profile</span>
@@ -33,7 +41,7 @@
 </body><br><br>
 
 <span class="details">Leave Details</span><br><br>
-<span class="num" *ngIf="dataSource.length > 0">Number of leaves :- {{this.dataSource.length}}</span>
+<span class="num" *ngIf="dataSource.length > 0">Number of leaves :- {{this.dataSource.length}}</span><br><br>
 <table mat-table [dataSource]="data" class="mat-elevation-z8 demo-table">
   <!-- Position Column -->
   <ng-container matColumnDef="id">
