--- a/src/app/change-password/change-password.component.html
+++ b/src/app/change-password/change-password.component.html
@@ -27,7 +27,7 @@
           <mat-icon>account_circle</mat-icon>
           <span>Edit Profile</span>
         </button>
-        <button mat-menu-item routerLink="">
+        <button mat-menu-item (click)="onLogout()">
           <mat-icon>logout</mat-icon>
           <span>Logout</span>
         </button>
