--- a/src/app/view/view.component.html
+++ b/src/app/view/view.component.html
@@ -21,7 +21,7 @@
       </button>
       <button *ngIf="isAdmin" mat-menu-item routerLink="/deactivate">
         <mat-icon>autorenew</mat-icon>
-        <span>Deactivate</span>
+        <span>Activate / Deactivate</span>
       </button>
       <button *ngIf="isAdmin" mat-menu-item routerLink="/export">
         <mat-icon>download</mat-icon>
@@ -31,7 +31,7 @@
         <mat-icon>account_circle</mat-icon>
         <span>Edit Profile</span>
       </button>
-      <button mat-menu-item routerLink="">
+      <button mat-menu-item (click)="onLogout()">
         <mat-icon>logout</mat-icon>
         <span>Logout</span>
       </button>
@@ -114,7 +114,7 @@
 </table>
 <br>
 <mat-paginator *ngIf="dataSource.length > 0"
-[pageSizeOptions]="[5,10,15]"
+[pageSizeOptions]="[5,10]"
 showFirstLastButtons
 aria-label="Select page">
 </mat-paginator>
