--- a/src/app/editprofile/editprofile.component.html
+++ b/src/app/editprofile/editprofile.component.html
@@ -37,7 +37,7 @@
     <mat-icon>lock</mat-icon>
     <span>Change Password</span>
   </button>
-<button mat-menu-item routerLink="">
+<button mat-menu-item (click)="onLogout()">
 <mat-icon>logout</mat-icon>
 <span>Logout</span>
 </button>
