--- a/src/app/export/export.component.css
+++ b/src/app/export/export.component.css
@@ -58,3 +58,8 @@
   .home{
     margin-left: 30%;
   }
+  .th{
+    font-size: larger;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: bold;
+  }
