--- a/src/app/export/export.component.html
+++ b/src/app/export/export.component.html
@@ -21,13 +21,13 @@
         </button>
         <button mat-menu-item routerLink="/deactivate">
           <mat-icon>autorenew</mat-icon>
-          <span>Deactivate</span>
+          <span>Activate / Deactivate</span>
         </button>
         <button mat-menu-item routerLink="/editprofile">
           <mat-icon>account_circle</mat-icon>
           <span>Edit Profile</span>
         </button>
-        <button mat-menu-item routerLink="">
+        <button mat-menu-item (click)="onLogout()">
           <mat-icon>logout</mat-icon>
           <span>Logout</span>
         </button>      
@@ -62,8 +62,8 @@
       </mat-form-field>
   
     </form><br>
-    <button style ="margin-left: 25%;" mat-raised-button color="primary" (click)="getExport()">Get</button>
-    <button style ="margin-left: 20%;" [disabled]="!isDataPresent" mat-raised-button color="primary" routerLink="/list" (click)="exporter.exportTable('xls', {fileName : 'Employee List'} );">Export</button>
+    <button style ="margin-left: 25%;" mat-raised-button color="primary" (click)="getExport()">Generate</button>
+    <button style ="margin-left: 15%;" [disabled]="!isDataPresent" mat-raised-button color="primary" routerLink="/list" (click)="exporter.exportTable('xls', {fileName : 'Employee List'} );">Download</button>
 
     
 
@@ -81,6 +81,16 @@
       <ng-container matColumnDef="name">
         <th class="th" mat-header-cell *matHeaderCellDef > Name </th>
         <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="mobile">
+        <th class="th" mat-header-cell *matHeaderCellDef> Contact No </th>
+        <td mat-cell *matCellDef="let element"> {{element.mobile}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="reportingManager">
+        <th class="th" mat-header-cell *matHeaderCellDef> reporting Manager </th>
+        <td mat-cell *matCellDef="let element"> {{element.reportingManager}} </td>
       </ng-container>
 
       <ng-container matColumnDef="gcmLevel">
