Added random changes

--- a/src/app/deactivate/deactivate.component.html
+++ b/src/app/deactivate/deactivate.component.html
@@ -34,9 +34,14 @@
     </mat-menu>
     
   </mat-toolbar>
-</body>
+  <router-outlet></router-outlet>
+</body><br><br><br><br><br>
+<div>
+
+
+<span class="details">Activate / Deactivate Employee</span>
 <form autocomplete="off">
-    
+  
   <mat-card class="card" >
 
       <img class="image" style="width: 150px; margin-left: 35%;" src="./assets/deactivate1.png">
@@ -67,5 +72,6 @@
   </mat-card>
 
 </form>
+</div>
 </div>
 </html>
