--- a/src/app/deactivate/deactivate.component.css
+++ b/src/app/deactivate/deactivate.component.css
@@ -71,7 +71,7 @@
 
 .card{
     font-size: medium;
-    margin: 11% 30% 30%;
+    margin: 7% 30% 30%;
     height: 350px;
     background-color:aliceblue;
 }
@@ -104,4 +104,11 @@
 }
 .home{
   margin-left: 30%;
+}
+.details{
+ margin-bottom: 10%;
+  margin-left:35% ;   
+  font-size : 30px ; 
+  font-weight: 200;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
