--- a/src/app/view/view.component.html
+++ b/src/app/view/view.component.html
@@ -98,7 +98,7 @@
     <!--Updated By Coloumn-->
     <ng-container matColumnDef="updatedBy">
       <th mat-header-cell class="ng" *matHeaderCellDef> <b> Updated By </b> </th>
-      <td mat-cell *matCellDef="let element"> {{element.updatedBy}} </td>
+      <td class="tdU" mat-cell *matCellDef="let element"> {{element.updatedBy}} </td>
     </ng-container>
 
     <!--Updated On Coloumn-->
